--- a/ProjetFinal/ProjetFinal/ProjetFinal.csproj
+++ b/ProjetFinal/ProjetFinal/ProjetFinal.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBContext.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
