--- a/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
+++ b/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
@@ -69,6 +69,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\IRepository.cs" />
+    <Compile Include="Model\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
