--- a/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
+++ b/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
@@ -56,6 +56,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModel\ViewModel.cs" />
+    <Compile Include="Views\AddNewQuery.xaml.cs">
+      <DependentUpon>AddNewQuery.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -68,6 +71,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\AddNewQuery.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\IRepository.cs" />
