Add and Modify Views

--- a/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
+++ b/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
@@ -56,6 +56,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModel\ViewModel.cs" />
+    <Compile Include="Views\ModifyQuery.xaml.cs">
+      <DependentUpon>ModifyQuery.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\AddNewQuery.xaml.cs">
       <DependentUpon>AddNewQuery.xaml</DependentUpon>
     </Compile>
@@ -71,6 +74,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\ModifyQuery.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\AddNewQuery.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
