TemplatesAndStyles + App.xaml update

--- a/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
+++ b/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
@@ -71,6 +71,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Themes\StylesAndTemplates.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AddNewQuery.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
