--- a/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
+++ b/ProjetFinal/ProjetFinal.UI.WPF/ProjetFinal.UI.WPF.csproj
@@ -112,6 +112,9 @@
   <ItemGroup>
     <Resource Include="Images\Logo.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Logo2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
