--- a/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
+++ b/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
@@ -163,6 +163,7 @@
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="scripts\Requetes.js" />
     <Content Include="styles\Gerer.css" />
+    <Content Include="styles\Login.css" />
     <Content Include="styles\Requetes.css" />
     <Content Include="styles\site.css" />
     <Content Include="Web.config" />
