--- a/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
+++ b/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
@@ -127,6 +127,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="HtmlPage1.html" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
