--- a/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
+++ b/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
@@ -128,6 +128,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="HtmlPage1.html" />
+    <Content Include="images\login-avatar.png" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
