--- a/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
+++ b/ProjetFinal/ProjetFinal.UI.HTML/ProjetFinal.UI.HTML.csproj
@@ -144,6 +144,7 @@
     <None Include="scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
+    <Content Include="scripts\Gerer-Ajax.js" />
     <Content Include="scripts\Gerer.js" />
     <Content Include="scripts\jquery-1.9.1.js" />
     <Content Include="scripts\jquery-1.9.1.min.js" />
