--- a/ProjetFinal/DAL/DAL.csproj
+++ b/ProjetFinal/DAL/DAL.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Page.cs">
       <DependentUpon>WebScraper.tt</DependentUpon>
     </Compile>
@@ -58,6 +59,7 @@
     <Compile Include="Query.cs">
       <DependentUpon>WebScraper.tt</DependentUpon>
     </Compile>
+    <Compile Include="Repository\Repository.cs" />
     <Compile Include="ResultsDetail.cs">
       <DependentUpon>WebScraper.tt</DependentUpon>
     </Compile>
