--- a/ProjetFinal/WCF.TestClient/App.config
+++ b/ProjetFinal/WCF.TestClient/App.config
@@ -7,8 +7,11 @@
   <system.serviceModel>
     
       <client>
-        <endpoint name="Canal1" address="http://192.168.1.182:1234/Service1" binding="basicHttpBinding" contract="WCF.IService1">
+        <endpoint name="Canal1" address="http://192.168.1.182:1234/Service1" binding="basicHttpBinding" contract="WCF.IService1">        
+          
         </endpoint>
+        <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="WCF.IRepository">        
+          </endpoint>
       </client>
     
 
