--- a/ProjetFinal/WCF.TestHost/App.config
+++ b/ProjetFinal/WCF.TestHost/App.config
@@ -6,9 +6,9 @@
 
   <system.serviceModel>
     <services>
-      <service name="WCF.Service1">
+      <service name="WCF.Repository">
        
-        <endpoint name="endpoint1" address="http://192.168.1.182:1234/Service1" binding="basicHttpBinding" contract="WCF.IService1">
+        <endpoint name="endpoint2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="WCF.IRepository">
         </endpoint>
 
       </service>
