--- a/ProjetFinal/WCF.TestHost/WCF.TestHost.csproj
+++ b/ProjetFinal/WCF.TestHost/WCF.TestHost.csproj
@@ -51,6 +51,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{aacef432-739e-43bd-a0a4-8d15293a6ba4}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WCF\WCF.csproj">
       <Project>{8b099b6e-3579-49b0-afeb-78baf92df406}</Project>
       <Name>WCF</Name>
