--- a/ProjetFinal/WCF.TestClient/App.config
+++ b/ProjetFinal/WCF.TestClient/App.config
@@ -1,20 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 
   <system.serviceModel>
-    
-      <client>
-        <endpoint name="Canal1" address="http://192.168.1.182:1234/Service1" binding="basicHttpBinding" contract="WCF.IService1">        
-          
-        </endpoint>
-        <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="DAL.IRepository">        
-          </endpoint>
-      </client>
-    
+
+    <client>
+      <endpoint name="Canal1" address="http://192.168.1.182:1234/Service1" binding="basicHttpBinding" contract="WCF.IService1">
+
+      </endpoint>
+      <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="DAL.IRepository">
+      </endpoint>
+    </client>
+
+    <behaviors>
+      <endpointBehaviors>
+        <behavior>
+          <dataContractSerializer maxItemsInObjectGraph="10000000"/>
+        </behavior>
+      </endpointBehaviors>
+      <serviceBehaviors>
+        <behavior>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IVtmWebResolution" maxBufferSize="2147483647" receiveTimeout="00:10:00" sendTimeout="00:10:00"
+            maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
+              maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+          <security mode="None" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
 
   </system.serviceModel>
-  
+
 </configuration>
