--- a/ProjetFinal/DAL/App.Config
+++ b/ProjetFinal/DAL/App.Config
@@ -13,4 +13,42 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
+  <system.serviceModel>
+    <services>
+      <service name="DAL.RepositoryService1">
+
+        <endpoint name="endpoint2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="DAL.IRepositoryService1">
+        </endpoint>
+
+      </service>
+    </services>
+
+    <!--<behaviors>
+      <endpointBehaviors>
+        <behavior>
+          <dataContractSerializer maxItemsInObjectGraph="10000000"/>
+        </behavior>
+      </endpointBehaviors>
+      <serviceBehaviors>
+        <behavior>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IVtmWebResolution" maxBufferSize="2147483647" receiveTimeout="00:10:00" sendTimeout="00:10:00"
+            maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
+              maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+          <security mode="None" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>-->
+    
+  </system.serviceModel>
+  
 </configuration>
