--- a/ProjetFinal/DAL/DAL.csproj
+++ b/ProjetFinal/DAL/DAL.csproj
@@ -55,7 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HostWCF.cs" />
+    <Compile Include="Repository\IRepositoryService1.cs" />
+    <Compile Include="Repository\RepositoryService1.cs" />
+    <Compile Include="WCF\HostWCF.cs" />
     <Compile Include="Page.cs">
       <DependentUpon>WebScraper.tt</DependentUpon>
     </Compile>
