--- a/ProjetFinal/BOL/BOL.csproj
+++ b/ProjetFinal/BOL/BOL.csproj
@@ -47,13 +47,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{aacef432-739e-43bd-a0a4-8d15293a6ba4}</Project>
-      <Name>DAL</Name>
-    </ProjectReference>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <ProjectReference Include="..\WCFContract\WCFContract.csproj">
+      <Project>{2d403005-9351-4688-bbfb-55b0aad70618}</Project>
+      <Name>WCFContract</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
