--- a/ProjetFinal/DAL/App.Config
+++ b/ProjetFinal/DAL/App.Config
@@ -14,17 +14,17 @@
     </providers>
   </entityFramework>
   
-  <system.serviceModel>
+  <!--<system.serviceModel>
     <services>
-      <service name="DAL.RepositoryService1">
+      <service name="WebScraper.DAL.RepositoryService1">
 
-        <endpoint name="endpoint2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="DAL.IRepositoryService1">
+        <endpoint name="endpoint2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="WebScraper.WCF.IRepositoryService1">
         </endpoint>
 
       </service>
     </services>
 
-    <!--<behaviors>
+    --><!--<behaviors>
       <endpointBehaviors>
         <behavior>
           <dataContractSerializer maxItemsInObjectGraph="10000000"/>
@@ -47,8 +47,8 @@
           <security mode="None" />
         </binding>
       </basicHttpBinding>
-    </bindings>-->
+    </bindings>--><!--
     
-  </system.serviceModel>
+  </system.serviceModel>-->
   
 </configuration>
