--- a/ProjetFinal/WCFHost/Web.config
+++ b/ProjetFinal/WCFHost/Web.config
@@ -4,6 +4,11 @@
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
+  
+  <connectionStrings>
+    <add name="WebScraperDBEntities" connectionString="metadata=res://*/WebScraper.csdl|res://*/WebScraper.ssdl|res://*/WebScraper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=DBWebScraping;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1"/>
@@ -20,12 +25,12 @@
         </service>
       </services>
 
-    <behaviors>
+    <!--<behaviors>
       <serviceBehaviors>
         <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
+          --><!-- To avoid disclosing metadata information, set the values below to false before deployment --><!--
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+          --><!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information --><!--
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
@@ -33,7 +38,7 @@
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />-->
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
