--- a/ProjetFinal/WCF.TestClient/App.config
+++ b/ProjetFinal/WCF.TestClient/App.config
@@ -7,9 +7,14 @@
   <system.serviceModel>
 
     <client>
-      <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="DAL.IRepositoryService1">
+      <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="WebScraper.WCF.IRepositoryService1">
       </endpoint>
     </client>
+    <!--<behaviors>
+      <endpointBehaviors>
+        <
+      </endpointBehaviors>
+    </behaviors>-->
 
   </system.serviceModel>
 
