--- a/ProjetFinal/WCF.TestClient/App.config
+++ b/ProjetFinal/WCF.TestClient/App.config
@@ -18,4 +18,20 @@
 
   </system.serviceModel>
 
+  <system.diagnostics>
+    <trace autoflush="true" />
+    <sources>
+      <source name="System.ServiceModel"
+              switchValue="Information, ActivityTracing"
+              propagateActivity="true">
+        <listeners>
+          <add name="sdt"
+              type="System.Diagnostics.XmlWriterTraceListener"
+              initializeData= "SdrConfigExample.e2e" />
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
+  
+  
 </configuration>
