--- a/ProjetFinal/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ProjetFinal/ConsoleApplication1/ConsoleApplication1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{32CEE4C5-FCCF-4FCE-B4F6-3615FBEC3704}</ProjectGuid>
+    <ProjectGuid>{9543E15B-EAE5-41DE-8AC4-0EE377F98988}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WCF.TestHost</RootNamespace>
-    <AssemblyName>WCF.TestHost</AssemblyName>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,9 +46,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryService1.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
@@ -58,10 +61,6 @@
     <ProjectReference Include="..\WCFContract\WCFContract.csproj">
       <Project>{2d403005-9351-4688-bbfb-55b0aad70618}</Project>
       <Name>WCFContract</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WCFHost\WCFHost.csproj">
-      <Project>{3519787a-edc7-439e-acfa-a634dba9740c}</Project>
-      <Name>WCFHost</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
