--- a/ProjetFinal/WCF.TestHost/App.config
+++ b/ProjetFinal/WCF.TestHost/App.config
@@ -6,15 +6,15 @@
 
 
   <system.serviceModel>
+
     <services>
-      <service name="WCF.Repository">
-       
-        <endpoint name="endpoint2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="WCF.IRepository">
+      <service name="WebScraper.WCF.RepositoryService1">
+
+        <endpoint name="endpoint2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="WebScraper.WCF.IRepositoryService1">
         </endpoint>
 
       </service>
     </services>
-   
   </system.serviceModel>
   
 </configuration>
