--- a/ProjetFinal/ConsoleApplication2/App.config
+++ b/ProjetFinal/ConsoleApplication2/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="WebScraperDBEntities" connectionString="metadata=res://*/WebScraper.csdl|res://*/WebScraper.ssdl|res://*/WebScraper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=DBWebScraping;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBWebScrapingEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=DBWebScraping;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.serviceModel>
     <behaviors>
