--- a/ProjetFinal/ConsoleApplication2/App.config
+++ b/ProjetFinal/ConsoleApplication2/App.config
@@ -20,13 +20,14 @@
     </behaviors>
     <services>
       <service name="WebScraper.WCF.RepositoryService1" behaviorConfiguration="debug">
-        <endpoint address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" bindingConfiguration="" contract="WebScraper.WCF.IRepositoryService1" />
+        <endpoint address="http://192.168.0.182:1234/Repository" binding="basicHttpBinding" bindingConfiguration="" contract="WebScraper.WCF.IRepositoryService1" />
       </service>
     </services>
     
     <bindings>
       <basicHttpBinding>
-        <binding sendTimeout="00:10:00"/>
+        <binding sendTimeout="00:10:00" name="MessageSizeBasic" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+		  </binding>
       </basicHttpBinding>
     </bindings>
     
