--- a/ProjetFinal/BOL.Automate/app.config
+++ b/ProjetFinal/BOL.Automate/app.config
@@ -2,10 +2,18 @@
 <configuration>
     <system.serviceModel>
       <client>
-        <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" contract="WebScraper.WCF.IRepositoryService1">
+        <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding"  bindingConfiguration="MessageSizeBasic" contract="WebScraper.WCF.IRepositoryService1">
         </endpoint>
 
-      </client>		  		  
+      </client>
+
+      <bindings>
+        <basicHttpBinding>
+          <binding sendTimeout="00:10:00" name="MessageSizeBasic" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          </binding>
+        </basicHttpBinding>
+      </bindings>
+      
     </system.serviceModel>
 </configuration>
 
