--- a/ProjetFinal/ConsoleApplication2/App.config
+++ b/ProjetFinal/ConsoleApplication2/App.config
@@ -20,7 +20,7 @@
     </behaviors>
     <services>
       <service name="WebScraper.WCF.RepositoryService1" behaviorConfiguration="debug">
-        <endpoint address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" bindingConfiguration="" contract="WebScraper.WCF.IRepositoryService1" />
+        <endpoint address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" bindingConfiguration="MessageSizeBasic" contract="WebScraper.WCF.IRepositoryService1" />
       </service>
     </services>
     
