--- a/ProjetFinal/UIL/Web.config
+++ b/ProjetFinal/UIL/Web.config
@@ -11,6 +11,21 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UIL-20170914043207.mdf;Initial Catalog=aspnet-UIL-20170914043207;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding sendTimeout="00:10:00" name="MessageSizeBasic" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint name="CanalQuery" address="http://192.168.1.182:1234/Repository" 
+                binding="basicHttpBinding"
+                contract="WebScraper.WCF.IRepositoryService1"
+                bindingConfiguration="MessageSizeBasic">
+      </endpoint>
+    </client>
+  </system.serviceModel>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
