--- a/ProjetFinal/UIL/UIL.csproj
+++ b/ProjetFinal/UIL/UIL.csproj
@@ -246,7 +246,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\addNewQuery\manageQueries.cshtml" />
     <Content Include="Views\Shared\_ListeURL.cshtml" />
-    <Content Include="Views\addNewQuery\_ListeSelector.cshtml" />
+    <Content Include="Views\Shared\_ListeSelector.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
