--- a/ProjetFinal/BOL.Automate/app.config
+++ b/ProjetFinal/BOL.Automate/app.config
@@ -4,6 +4,8 @@
       <client>
         <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding"  bindingConfiguration="MessageSizeBasic" contract="WebScraper.WCF.IRepositoryService1">
         </endpoint>
+        <endpoint name="CanalArbitre" address="http://192.168.1.182:5678/Arbitre" binding="basicHttpBinding"  bindingConfiguration="MessageSizeBasic" contract="WebScraper.WCF.IArbitreService">
+        </endpoint>
 
       </client>
 
