--- a/ProjetFinal/ConsoleApplication2/App.config
+++ b/ProjetFinal/ConsoleApplication2/App.config
@@ -19,11 +19,17 @@
       </serviceBehaviors>
     </behaviors>
     <services>
+      <service name="WebScraper.WCF.ArbitreService" behaviorConfiguration="debug">
+        <endpoint address="http://192.168.1.182:5678/Arbitre" binding="basicHttpBinding" bindingConfiguration="MessageSizeBasic" 
+                  contract="WebScraper.WCF.IArbitreService" />
+      </service>
+      
       <service name="WebScraper.WCF.RepositoryService1" behaviorConfiguration="debug">
         <endpoint address="http://192.168.1.182:1234/Repository" binding="basicHttpBinding" bindingConfiguration="MessageSizeBasic" contract="WebScraper.WCF.IRepositoryService1" />
       </service>
+      
     </services>
-    
+
     <bindings>
       <basicHttpBinding>
         <binding sendTimeout="00:10:00" name="MessageSizeBasic" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
