--- a/ProjetFinal/ConsoleApplication2/ConsoleApplication2.csproj
+++ b/ProjetFinal/ConsoleApplication2/ConsoleApplication2.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArbitreService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryService1.cs" />
