--- a/ProjetFinal/UIL/Web.config
+++ b/ProjetFinal/UIL/Web.config
@@ -19,7 +19,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint name="CanalQuery" address="http://192.168.1.182:1234/Repository" 
+      <endpoint name="Canal2" address="http://192.168.1.182:1234/Repository" 
                 binding="basicHttpBinding"
                 contract="WebScraper.WCF.IRepositoryService1"
                 bindingConfiguration="MessageSizeBasic">
